WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197145
Defer EditorState updates until the next layer tree flush in a few additional circumstances
https://bugs.webkit.org/show_bug.cgi?id=197145
Summary
Defer EditorState updates until the next layer tree flush in a few additional...
Wenson Hsieh
Reported
2019-04-20 23:41:57 PDT
Examples include after changing editability, showing the font manager on macOS, and after a selection change.
Attachments
Patch
(13.93 KB, patch)
2019-04-20 23:46 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-20 23:42:26 PDT
<
rdar://problem/50078170
>
Wenson Hsieh
Comment 2
2019-04-20 23:46:33 PDT
Created
attachment 367904
[details]
Patch
Wenson Hsieh
Comment 3
2019-04-21 13:43:13 PDT
Comment on
attachment 367904
[details]
Patch Thanks for the review!
WebKit Commit Bot
Comment 4
2019-04-21 14:10:37 PDT
Comment on
attachment 367904
[details]
Patch Clearing flags on attachment: 367904 Committed
r244494
: <
https://trac.webkit.org/changeset/244494
>
WebKit Commit Bot
Comment 5
2019-04-21 14:10:38 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 6
2019-04-30 09:56:55 PDT
It looks like the changes in
https://trac.webkit.org/changeset/244494/webkit
has caused the test editing/pasteboard/5761530-1.html to become flakey. I was able to reproduce this using command: run-webkit-tests editing/pasteboard/5761530-1.html --iterations 20 --ios-simulator The test passes on 244493 and with fail on 244494 History:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=editing%2Fpasteboard%2F5761530-1.html
Diff: --- /Volumes/Data/slave/ios-simulator-12-release-tests-wk2/build/layout-test-results/editing/pasteboard/5761530-1-expected.txt +++ /Volumes/Data/slave/ios-simulator-12-release-tests-wk2/build/layout-test-results/editing/pasteboard/5761530-1-actual.txt @@ -1,3 +1,3 @@ This tests to see that tabs are put into tab spans when they are copied individually. The pasted tab should be inside of a tab span, not a style span. To run the test manually, paste and then inspect the editable region, and ensure that there is a tab span at the beginning of the editable div. -<span class="Apple-tab-span" style="white-space: pre;"> </span><span class="Apple-tab-span" style="white-space:pre;"> </span>xxx +<span class="Apple-tab-span" style="white-space: pre;"> </span><span class="Apple-tab-span" style="white-space:pre;"> </span>xxx
Ryosuke Niwa
Comment 7
2019-04-30 13:41:18 PDT
That's rather surprising. The test doesn't seem like it would depend anything related to EditorState.
Ryosuke Niwa
Comment 8
2019-04-30 13:42:44 PDT
Filed
https://bugs.webkit.org/show_bug.cgi?id=197438
to track the test flakiness.
Alexey Proskuryakov
Comment 9
2019-04-30 14:14:56 PDT
EWS did hit this failure, but since it is flaky, it wasn't reported. Perhaps we could eventually develop some logic for EWS to dig into flaky failures.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug