Defer EditorState updates until the next layer tree flush in a few additional circumstances https://bugs.webkit.org/show_bug.cgi?id=197145 <rdar://problem/50078170>

Reviewed by Darin Adler.

Source/WebKit:

Gets rid of sendPartialEditorStateAndSchedulePostLayoutUpdate(), in favor of always scheduling a full editor
state update after the next compositing flush.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateEditorStateAfterLayoutIfEditabilityChanged):
(WebKit::WebPage::setNeedsFontAttributes):
(WebKit::WebPage::didChangeOverflowScrollPosition):
(WebKit::WebPage::didChangeSelection):
(WebKit::WebPage::didChangeSelectionOrOverflowScrollPosition):
(WebKit::WebPage::sendPartialEditorStateAndSchedulePostLayoutUpdate): Deleted.
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::platformEditorState const):
(WebKit::WebPage::updateVisibleContentRects):

Tools:

Adjusts several editing API tests to wait for a presentation update following a selection change, programmatic
focus, or showing the font manager.

* TestWebKitAPI/Tests/WebKitCocoa/EditorStateTests.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKitCocoa/WKContentViewTargetForAction.mm:
(TEST):
* TestWebKitAPI/Tests/mac/FontManagerTests.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/211369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244494 268f45cc-cd09-0410-ab3c-d52691b4dbfc